--- a/app/src/main/res/layout/event_holder.xml
+++ b/app/src/main/res/layout/event_holder.xml
@@ -5,14 +5,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp">
 
     <TextView
         android:id="@+id/textview_eventholder_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="HH:MM:SS"
-        android:textColor="@color/eventLabels"/>
+        android:textColor="@color/eventLabels" />
 
     <ImageButton
         android:id="@+id/imagebutton_eventholder_favorite"
