--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="blue">#FF0066CC</color>
     <color name="dark_blue">#FF00264D</color>
-    <color name="light_blue">#FFCCE5FF</color>
+    <color name="light_blue">#FF000033</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="eventLabels">#FF000000</color>
+    <color name="eventLabels">#FFFFFFFF</color>
+    <color name="yellow">#FFFFFF00</color>
 </resources>
